<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subir_producto"
            android:icon="@drawable/ic_add_button"
            android:title="@string/menu_item1" />
        <item
            android:id="@+id/nav_mis_productos"
            android:icon="@drawable/ic_mis_productos"
            android:title="@string/menu_item2" />
        <item
            android:id="@+id/nav_mis_favoritos"
            android:icon="@drawable/ic_mis_productos"
            android:title="@string/menu_item5" />
        <item
            android:id="@+id/nav_ver_usuarios"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_item3" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_item4" />
    </group>

    <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
