<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/form_container"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:onClick="backClick"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:src="@drawable/ic_back" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toRightOf="@+id/back_button"
            android:gravity="center_vertical">

            <design.nxn.login_template_02.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/nick_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/nick_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_user"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/nick_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/nick_icon"
                android:background="@android:color/transparent"
                android:hint="@string/nick"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_user"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/username_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/user_icon"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/surname_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/surname_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_user"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/surname_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/surname_icon"
                android:background="@android:color/transparent"
                android:hint="@string/surname"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_email"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/email_icon"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/direccion_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/direccion_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_location3"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/direccion_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/direccion_icon"
                android:layout_toRightOf="@+id/direccion_icon"
                android:background="@android:color/transparent"
                android:hint="@string/direccion"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_password"
                android:tint="@color/black" />

            <design.nxn.login_template_02.customfonts.MyEditText
                android:id="@+id/pass_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/password_icon"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/signin_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent">

        <LinearLayout
            android:id="@+id/signup_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true">

            <design.nxn.login_template_02.customfonts.MyTextView
                android:id="@+id/myTextView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <design.nxn.login_template_02.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="@color/light_text"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="-10dp"
                android:clickable="true"
                android:onClick="signInClick">

                <design.nxn.login_template_02.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
