<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle"
                android:padding="10dp"
                android:src="@drawable/ic_spaceship2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="102dp" />

            <design.nxn.login_template_02.customfonts.HandleeTextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="53dp"
                android:fontFamily=""
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_email"
                        android:tint="@color/black" />

                    <design.nxn.login_template_02.customfonts.MyEditText
                        android:id="@+id/email_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@+id/email_icon"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_text"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/divider" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/email_layout">

                    <ImageView
                        android:id="@+id/password_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_password"
                        android:tint="@color/black" />

                    <design.nxn.login_template_02.customfonts.MyEditText
                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@+id/password_icon"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_text"
                        android:textSize="@dimen/text_size_medium" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/password_layout"
                    android:background="@color/colorAccent">

                    <LinearLayout
                        android:id="@+id/login_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:clickable="true">

                        <design.nxn.login_template_02.customfonts.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_big" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/forgot_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:onClick="resetPasswordClick">

                    <design.nxn.login_template_02.customfonts.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />
                </LinearLayout>


                <LinearLayout
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:onClick="signUpClick">

                    <design.nxn.login_template_02.customfonts.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
